cluster/policy/require-namespace-network-policies.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNamespaceNetworkPolicies
metadata:
  name: require-namespace-network-policies
  annotations:
    # This constraint is not certified by CIS.
    description: "Requires that every namespace defined in the cluster has a NetworkPolicy."
# spec:
#   enforcementAction: dryrun # {"$kpt-set":"enforcementAction"}
